@@ -14,3 +14,4 @@ Gustavo Zacarias <gustavoz@gentoo.org>
 Robert Paskowitz <r2d2@gentoo.org>
 David Bryson <mutex@gentoo.org>
 Daniel Ostrow <dostrow@gentoo.org>
+Matsuu Takuto <matsuu@gentoo.org>
