@@ -1,5 +1,10 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.328 2005/09/08 20:59:07 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.329 2005/09/12 15:31:56 wolf31o2 Exp $
+
+  12 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS, +arch/sh.py,
+  modules/generic_stage_target.py:
+  Added sh architecture to supported architectures. Thanks to Matsuu Takuto
+  <matsuu@gentoo.org> for the patch. Closing bug #105693.
 
   08 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/livecd-stage1/livecd-stage1-controller.sh,
